# noshow_lib

./: .gitignore  LICENSE  config.yaml  inspect_model_features.py  pipeline.py  pyproject.toml  requirements.txt  run_inference_test.py  run_single_inference.py  test.py  test_fe_only.py  test_full_pipeline.py  test_inference_robustness.py  test_train_view.py  verify_installation.py
config/: db.py  local.yaml  readme.md  settings.py
data/: readme.md
data/01 - raw/: readme.md
data/02 - preprocessed/: readme.md
data/03 - features/: readme.md
data/04 - predictions/: metrics.csv
data/debug_output/: resultado_teste_integracao.csv
src/: README.md
src/noshow_lib/: 01_config.py  02_data_processing.py  03_feature_engineering.py  __init__.py  config.py  config.yaml  data_handler.py  data_processing.py  feature_engineering.py  logger.py  model_inference.py  model_prediction.py  model_training.py
tests/: test_feature_engineering.py  test_integration.py
